Categories Heading Displaying improperly on Mobile Devices Fixed

--- a/style/style.css
+++ b/style/style.css
@@ -254,12 +254,12 @@ main#index > h2::after {
     }
     main#index > h2 {
         text-align: center;
-        background-color: #eee;
-        padding: 0.5em 2em 0 2em;
+        background-color: #ddd;
+        padding: 0.5em 2em 0.5em 2em;
         margin-top: 1.5em;
     }
     main#index > h2::after {
-        content: ' : '
+        top: 0.5em;
     }
 }
 
